[package]
name = "car_logger"
version = "1.1.0"
authors = ["ccfreak2k"]
edition = "2018"

[dependencies]
#async-std = "1.10.0"
chrono = "0.4"
chrono-tz = "0.9.0"
clap = { version = "4.5.1", features = ["derive"] }
geoutils = "0.5.1"
gpio = "0.4.1"
hex = "0.4.3"
libc = "0.2.153"
log = "0.4.21"
#quantities = { version = "0.12.0", features = ["power", "speed"]}
socketcan = "3.3"
serde = { version = "1.0.197", features = ["derive"] }
signal-hook = "0.3.17"
threadpool = "1.8.1"
#tokio = { version = "1.33.0", features = ["full"] }
toml = "0.8.10"
uom = "0.35.0"
ratatui = "0.26.1"
crossterm = "0.27.0"

[profile.release-with-debug]
inherits = "release"
debug = true
